add full dataset

--- a/template_summary_wip.ipynb
+++ b/template_summary_wip.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "99de8d09",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,8 @@
     "end_date = datetime.strptime(\"2024-01-31\", \"%Y-%m-%d\").date()\n",
     "\n",
     "numerical_data = pd.read_csv(\"data/numerical_data.csv\")\n",
-    "text_data = pd.read_csv(\"data/text_data.csv\")"
+    "text_data = pd.read_csv(\"data/text_data.csv\")\n",
+    "df = pd.read_csv(\"data/full_dataset.csv\")"
    ]
   },
   {
@@ -231,6 +232,53 @@
     "plt.title(\"Average Breathing Rate Over Time\")\n",
     "plt.axhline(y=numerical_data[\"Avg Breathing Rate\"].mean(), color='r', linestyle='--', label='Mean Breathing Rate')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "04d73dca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8953 entries, 0 to 8952\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   Date                     8953 non-null   object \n",
+      " 1   Description              8943 non-null   object \n",
+      " 2   Is Important             8943 non-null   object \n",
+      " 3   Time                     8943 non-null   object \n",
+      " 4   Created By               8943 non-null   object \n",
+      " 5   Category                 8943 non-null   object \n",
+      " 6   Min Breathing Rate       7358 non-null   float64\n",
+      " 7   Max Breathing Rate       7358 non-null   float64\n",
+      " 8   Avg Breathing Rate       7358 non-null   float64\n",
+      " 9   Median Breathing Rate    7358 non-null   float64\n",
+      " 10  Min Heart Rate           7911 non-null   float64\n",
+      " 11  Max Heart Rate           7911 non-null   float64\n",
+      " 12  Avg Heart Rate           7911 non-null   float64\n",
+      " 13  Median Heart Rate        7911 non-null   float64\n",
+      " 14  Min Oxygen Level         4250 non-null   float64\n",
+      " 15  Max Oxygen Level         4250 non-null   float64\n",
+      " 16  Avg Oxygen Level         4250 non-null   float64\n",
+      " 17  Median Oxygen Level      4250 non-null   float64\n",
+      " 18  Light Sleep Observation  7023 non-null   float64\n",
+      " 19  Deep Sleep Observation   6979 non-null   float64\n",
+      " 20  Rem Sleep Observation    6919 non-null   float64\n",
+      " 21  Awake Sleep Observation  7748 non-null   float64\n",
+      " 22  Total Sleep Observation  7997 non-null   float64\n",
+      "dtypes: float64(17), object(6)\n",
+      "memory usage: 1.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   }
  ],
